# SDLpracticas

.github/workflows/: cmake-multi-platform.yml  win.yml  winmsvc.yml
SDLBMP/: CMakeLists.txt  main.cpp
SDLBMP/includes/: Game.h
SDLBMP/src/: Game.cpp
SDLFraccionado/: CMakeLists.txt
SDLFraccionado/includes/: Game.h
SDLFraccionado/src/: Game.cpp
SDLGameObject/: CMakeLists.txt  main.cpp
SDLGameObject/includes/: Enemy.h  Game.h  GameObject.h  Player.h
SDLGameObject/src/: Enemy.cpp  Game.cpp  GameObject.cpp  Player.cpp
SDLGameObjectClasesAbstractas/: CMakeLists.txt  main.cpp
SDLGameObjectClasesAbstractas/includes/: Enemy.h  GameObject.h  Player.h  SDLGameObject.h
SDLGameObjectClasesAbstractas/src/: Enemy.cpp  Game.cpp  Player.cpp  SDLGameObject.cpp
SDLGameStates/: CMakeLists.txt  main.cpp
SDLGameStates/includes/: AnimatedGraphic.h  Background.h  Enemy.h  Game.h  GameOverState.h  GameState.h  GameStateMachine.h  InputHandler.h  LoaderParams.h  MenuButton.h  MenuState.h  PauseState.h  PlayState.h  SDLGameObject.h  TextureManager.h
SDLGameStates/src/: AnimatedGraphic.cpp  Background.cpp  Enemy.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  GameStateMachine.cpp  InputHandler.cpp  MenuButton.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  Player.cpp  SDLGameObject.cpp  TextureManager.cpp
SDLImage/: CMakeLists.txt  main.cpp
SDLImage/includes/: Game.h
SDLImage/src/: Game.cpp
SDLInputHandler/: CMakeLists.txt  main.cpp
SDLInputHandler/includes/: Game.h  InputHandler.h  Player.h
SDLInputHandler/src/: Enemy.cpp  Game.cpp  InputHandler.cpp  Player.cpp
SDLTextureManager/: CMakeLists.txt  main.cpp
SDLTextureManager/includes/: Game.h  TextureManager.h
SDLTextureManager/src/: Game.cpp  TextureManager.cpp
SDLVector/: CMakeLists.txt  main.cpp
SDLVector/includes/: Game.h  LoaderParams.h  Player.h  SDLGameObject.h  Vector2D.h
SDLVector/src/: Game.cpp  GameObject.cpp  Player.cpp  SDLGameObject.cpp
SDLWindow/: CMakeLists.txt  SDL2Test
